fix alignment issues portfolio....the correct one

--- a/_sass/layout/_clients.scss
+++ b/_sass/layout/_clients.scss
@@ -13,13 +13,11 @@
   .portfolio-hover-content {
     font-size: 20px;
     position: absolute;
-    bottom: 10%;
+    bottom: 0;
     width: 100%;
-    height: 20px;
-    margin-top: -12px;
     text-align: center;
     color: white;
-	font-weight: bold;
+    font-weight: bold;
     i {
       margin-top: -12px;
     }
